# composable-functions

./: README.md  pyproject.toml
composablefunctions/: __init__.py  composable.py  composed_functions.json  example.py
examples/: add_function_and_save_example.py  composed_function.json  load_example.py  my_float_lib_example.py  my_string_lib_example.py  numpy_example.py  string_example.py
